assets/css/style.css
/* ... */
.about-text .btn {
    margin-top: 10px;
}


.contact-info {
    margin: 0;
    margin-top: 30px;
    padding: 0;
    list-style: none;
}
.contact-info li  {
    width: 100%;
    clear: both;
    overflow: hidden;
}
.contact-info li i.fa {
    width: 40px;
    height: 40px;
    line-height: 40px;
    font-size: 20px;    
    border-radius: 50px;
    margin-right: 15px;
    display: inline-block;
    text-align: center;
    color: #85af4b;
    border: 1px solid #85af4b;
    float: left;
    margin-bottom: 20px;
    overflow: hidden;
}
.contact-info li p {
    line-height: 40px;
    margin-bottom: 0;
    overflow: hidden;
}



/* ----------------------------------------------------------------------------------------
*                                   05. Service area css
* --------------------------------------------------------------------------------------- */

.service-area {
}

.single-service {
    padding: 20px;
    transition: 0.2s ease-out;
    text-align: center;
    border: 1px solid transparent;
    transition: all 0.3s ease-out;
    -webkit-transition: all 0.3s ease-out;
}

.single-service i.fa {
    margin-right: 20px;
    margin-bottom: 10px;
    text-align: center;
    width: 70px;
    height: 70px;
    display: inline-block;
    line-height: 68px;
    font-size: 30px;
    border-radius: 50px;    
    background-color: #85af4b;
    color: #fff;
    clear: both;
}

.single-service:hover {
    border: 1px solid #85af4b;
}

.single-service:hover i.fa {
    background-color: #fff;
    color: #85af4b;
    border: 1px solid #85af4b;
}

.single-service h3{
    display: block;
}

.single-service p {
    margin-top: 10px;
    text-align: left;
}




/* ----------------------------------------------------------------------------------------
*                               04. Process area css
* ---------------------------------------------------------------------------------------*/
.process-area {
    background-image: url(../img/work-bg.jpg);  
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    position: relative;
}

.process-area:before {
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    content: "";
    position: absolute;
    background: rgba(255, 255, 255, 0.8);
}

.process-box {
    position: relative;
    margin-bottom: 25px;
}

@media (min-width: 1200px) {
    .process-box {
        padding: 0 30px;
    }
}

.number {
    border: 1px solid #85af4b;
    color: #fff;
    background: #85af4b;
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    border-radius: 50px;
    position: relative;
    margin-bottom: 25px;
}

.process-box:before {
    position: absolute;
    content: '';
    top: 25px;
    left: 90px;
    width: 100px;
    text-align: right;
    line-height: 3px;
    height: 3px;
    color: #85af4b;
    border-bottom: 3px dashed #85af4b;
    transform: translate( 0, -50%);
    -ms-transform: translate( 0, -50%);
    -webkit-transform: translate( 0, -50%);
}

.process-box:after {
    position: absolute;
    content: '\f0a9';
    font-family: fontAwesome;
    font-size: 30px;
    top: 25px;
    left: 50%;
    width: 170px;
    text-align: right;
    line-height: 3px;
    height: 3px;
    color: #85af4b;
    transform: translate( -50%, -50%);
    -ms-transform: translate( -50%, -50%);
    -webkit-transform: translate( -50%, -50%);
}

.process-box.last:after {
    content: '\f058';
}

.process-box p{}


/* ----------------------------------------------------------------------------------------
*                               06. Portfolio/work area css
* --------------------------------------------------------------------------------------- */
.portfolio .mix {
    display: none;
}

.filters {
    margin: 0;
    padding: 0;
    list-style: none;
    text-align: center;
}

.filters li {
    display: inline-block;
    margin: 0px 15px;
    margin-bottom: 20px;
    padding: 5px 20px;
    border: 1px solid #777;
    border-radius: 30px;
    cursor: pointer;
    font-weight: 400;
    color: #333;
}

.filters li.active {
    color: #fff;
    background-color: #85af4b;
    border: 1px solid #85af4b;
}

.work-items {
    /*
    margin-top: 20px;
    margin-right: -10px;
    margin-left: -10px;
    */
}

.work-items .item {
    position: relative;
    overflow: hidden;
    /*margin: 5px -10px;*/
}

.work-items .item h3{
    text-align: center;
}

.work-items .item img {
    height: auto;
    transition: 0.8s ease-out;
}

.work-items .overlay{
    background-color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 0;
    height: 0;
    text-align: center;
    opacity: 0;
    transition: 0.3s cubic-bezier(0.4, 0, 1, 1);
    -ms-transition: 0.3s cubic-bezier(0.4, 0, 1, 1);
    -moz-transition: 0.3s cubic-bezier(0.4, 0, 1, 1);
    -webkit-transition: 0.3s cubic-bezier(0.4, 0, 1, 1);
}

.work-items .item:hover {    
    transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    z-index: 100;
}
.work-items .item:hover .overlay {
    opacity: 0.5;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.work-items .item:hover img {
    transform: scale(1.2);
    -ms-transform: scale(1.2);
    -moz-transform: scale(1.2);
    -webkit-transform: scale(1.2);
}


.work-items .overlay i.fa {
    font-size: 25px;
    color: #85af4b;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* ... */

